Refactored Code and Rewrited Readme.md

--- a/Владислав_Бугаенко/api/appsettings.json
+++ b/Владислав_Бугаенко/api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Def": "Host=;Port=;Username=;Database=;Password="
+  }
 }
